# n8n-executive-reporting-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docker/: docker-compose.yml
src/api/: main.py
src/generators/: distributor.py  narrative.py  report.py
tests/: test_pipeline.py
workflows/: executive_reporting_pipeline.json
